# omnia-langchain-runtime

./: .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml
docs/: README.md  astro.config.mjs  check-links.js  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/api/: index.md
docs/src/content/docs/contributors/: index.md
docs/src/content/docs/deployment/: index.md
docs/src/content/docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/src/content/docs/grpc/: index.md
docs/src/content/docs/providers/: index.md
docs/src/content/docs/session/: index.md
docs/src/content/docs/tools/: index.md
docs/src/styles/: custom.css
proto/: runtime.proto
src/omnia_langchain_runtime/: __init__.py  __main__.py  agent.py  config.py  handler.py  mock_provider.py  providers.py  runtime_pb2.py  runtime_pb2.pyi  runtime_pb2_grpc.py  runtime_pb2_grpc.pyi  server.py
src/omnia_langchain_runtime/session/: __init__.py  base.py  memory.py  redis.py
src/omnia_langchain_runtime/tools/: __init__.py  adapter.py  config.py  http.py  manager.py
tests/: test_config.py  test_session.py  test_tools.py
tests/fixtures/: test.pack.json
